# InstallRS

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  build.rs  installrs.manifest
.github/workflows/: ci.yml  release.yml
.zed/: settings.json
docs/: README.md  architecture.md  builder-cli.md  building.md  components-and-cli.md  embedded-files.md  getting-started.md  gui-wizard.md  how-to.md  installer-api.md  internationalization.md  metadata-reference.md  windows-resources.md
example/: Cargo.toml  installer.rs  pro-bonus.txt  strings.yml  test.txt
example/testdir/: hello.txt
example/testdir/subdir/: nested.txt
scripts/: release.sh
src/: cmdline.rs  component.rs  embedded.rs  lib.rs  ops.rs  options.rs  progress.rs  registry.rs  self_destruct.rs  self_destruct_windows.rs  shortcut.rs  source.rs  types.rs
src/gui/: dialog.rs  mod.rs  types.rs
src/gui/gtk/: mod.rs  pages.rs  window.rs
src/gui/win32/: mod.rs  pages.rs  window.rs
tests/: integration.rs
tests/fixtures/simple/: Cargo.toml  data.txt  installer.rs
