[package]
name = "my-installer"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_installer"
path = "installer.rs"

[dependencies]
installrs = { path = ".." }
anyhow = "1"
rust-i18n = "4"
sys-locale = "0.3"

# Shared defaults for both installer and uninstaller
[package.metadata.installrs]
gui = true
subsystem = "console"
icon = "../installrs.png"
icon-sizes = [16, 32, 48, 256]
language = 0x0409
execution-level = "requireAdministrator"
dpi-aware = "permonitorv2"
supported-os = ["7", "8", "8.1", "10"]
product-name = "InstallRS Example"
file-version = "0.1.0.0"
product-version = "0.1.0.0"
legal-copyright = "Copyright (c) 2026"

# Installer-specific overrides
[package.metadata.installrs.installer]
file-description = "Example InstallRS installer"
original-filename = "installer.exe"

# Uninstaller-specific overrides
[package.metadata.installrs.uninstaller]
file-description = "Example InstallRS uninstaller"
original-filename = "uninstaller.exe"
